{
    "name": "Player",
    "maps": [
        {
            "name": "PlayerAction",
            "id": "ecff72fa-0938-497e-97d8-8d70834ddacb",
            "actions": [
                {
                    "name": "Option",
                    "type": "Button",
                    "id": "d4aac9b5-b576-4204-89ed-4fb9101946ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tab",
                    "type": "Button",
                    "id": "99e54c34-22a3-4e94-9dd2-a800e70f1562",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P",
                    "type": "Button",
                    "id": "77ccf4fb-5bc4-41b8-946b-6a7568598270",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse1",
                    "type": "Value",
                    "id": "48196115-1a01-488f-9da0-08607fffe50e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fad4f8a9-b955-43ca-a317-2122c24ef851",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Tab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f084d0f5-05fa-462d-82c8-94d4d33ce5e5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Option",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ba41c41-cdbf-44bb-9066-f215d7a99c80",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "P",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea5efe95-df22-4f88-a6c5-4195e83a99ec",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Mouse1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}